[gd_scene load_steps=2 format=3 uid="uid://fa5g4m5iwfjq"]

[ext_resource type="Script" path="res://Scenes/Components/hurtbox_component.gd" id="1_84xct"]

[node name="HurtboxComponent" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_84xct")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
